[package]
name = "cota-smt"
version = "0.11.0"
edition = "2021"

[dependencies]
cfg-if = "1.0"
blake2b-ref = "0.3.1"
ckb-std = {version = "0.14.2", optional = true}
ckb-types = {version = "0.110.1", optional = true}
molecule = {version = "0.7.2", default_features = false, optional = true}
sparse-merkle-tree = {version = "0.6.1", default_features = false}


[features]
default = ["std", "ckb-types"]
std = []
no-std = ["ckb-std", "molecule"]
